<resources>
    <string name="app_name">DryWar</string>
    <string name="iniciar">Start</string>
    <string name="titulo_do_jogo">Hold on as long as you can in this game!</string>
    <string name="controles">Controls</string>
    <string name="_0_ponto">0 score</string>
    <string name="recomecar">Restart</string>
    <string name="sair">Exit</string>
    <string name="seu_recorde_em_pontos">YOUR RECORD IN POINTS</string>
    <string name="seu_recorde_em_posi_o">YOUR RECORD IN POSITION</string>
    <string name="pt">Sc</string>
    <string name="usuarios">Users</string>
    <string name="pontos">Points</string>
    <string name="classifica_o_desse_jogo">RATE THIS GAME</string>
    <string name="os_12">The 12</string>
    <string name="ok">OK</string>
    <string name="voce">You</string>
    <string name="joystick">Joystick</string>
    <string name="gestos">Gestures</string>
    <string name="mensagem_do_inicio">You are now in the Caatinga. Collect the badges to score, but be careful when touching people and monsters. If you touch them you will lose the game!</string>
    <string name="colegio">Southwest Forest</string>
    <string name="colegio2">This forest is mainly made up of cacti.</string>
    <string name="prefeitura">Southeast Forest.</string>
    <string name="prefeitura2">This forest is mainly made of Jurubebas (a Brazilian plant).</string>
    <string name="rua_da_lagoa">Northwest Forest</string>
    <string name="rua_da_lagoa2">This forest is made up of vegetation from the exclusively Brazilian Caatinga biome.</string>
    <string name="praca_nova">Northeast Forest</string>
    <string name="praca_nova2">This forest is made up of vegetation from the exclusively Brazilian Caatinga biome.</string>
    <string name="ponto">"point"</string>
    <string name="pontos2">" points"</string>
    <string name="info1">Diamond 1 Badge| </string>
    <string name="pontos3">points!</string>
    <string name="info1v2">The diamond gives you 1 point and also extra energy.</string>
    <string name="info2">Diamond 2 Badge| </string>
    <string name="info2v2">The diamond gives you 2 point and also extra energy.</string>
    <string name="info3">Diamond 3 Badge| </string>
    <string name="info3v2">The diamond gives you 3 point and also extra energy.</string>
    <string name="info4">Diamond 4 Badge| </string>
    <string name="info4v2">The diamond gives you 4 point and also extra energy.</string>
    <string name="info5">Diamond 5 badge| </string>
    <string name="info5v2">The diamond gives you 5 point and also extra energy.</string>
    <string name="info6">Blue diamond Badge| </string>
    <string name="info6v2">The diamond gives you 7 point and also extra energy.</string>
    <string name="mensagem_do_cangaceiro">Click on the roulette wheel to find out who will help me destroy you in the game!</string>
    <string name="clique_na_roleta">Click on the roulette wheel to start the GAME!</string>
    <string name="seu_avatar">José Silva (your avatar)</string>
    <string name="mensagem_do_som">Click the button below to keep the sound on or off next time</string>
</resources>